DOMjudge Programming Contest Judging System

Version 2.1.1 - SVN
-------------------
 - Implement syslog logging (for PHP and shell-script).
 - Fix bug in jury/submission.php, thanks mhil@fmf.nl (Closes: #1808259).

Version 2.1.0 - 5 September 2007
--------------------------------
 - Drop tempfile and mkstemps binaries, they are not necessary.
 - Change runguard license to GPL 2 or higher. The current code
   is a different implementation of the original idea from timeout.
 - Make shell scripts /bin/sh where possible, set them to bash
   where we rely on bash-specific features.
 - Fixes to judge/compare.c for better handling of strange newlines and
   printing first difference summary as first line.
 - Allow admins to rejudge PENDING/CORRECT submissions (Closes: #1766222).
 - Fix include test for Text_Highlighter to cope with missing PEAR.php.
 - Fix password generation for more than one team.
 - Fix test-logic bug in judge/check_program.sh: reversing judging outcomes.
 - Make warning and error beeps default to something more noticeable.
 - Let show_source cope with empty file submissions gracefully.
 - Abort startup of judgedaemon if processes of RUNUSER still found running.
 - Added extra default problem 'fltcmp' for testing check_float and special
   run script code.
 - Fix make_passwords.sh to cope with htpasswd2 instead of htpasswd. Thanks
   Tobias Werth for the patch.
 - Fix 2 generate_config.sh bugs: quoting error and tempfile cleanup.
 - Print float abs/rel diffs in check_float (Closes: #1777195).
 - Allow teams to respond to received clarifications (Closes: #1777179).
 - Check LANG_EXTS array for consistency with languages table in configtest
   (Closes: #1777182).

Version 2.0.0 - SVN
-------------------
 - Use correct last modified date of team manual (Closes: #1744121).
 - Allow to set a specific new password for a team (Closes: #1737142).
 - Split general functions from submitcommon.cc to lib.misc.c and