@@ -4,6 +4,7 @@ Version 2.1.1 - SVN
 -------------------
  - Implement syslog logging (for PHP and shell-script).
  - Fix bug in jury/submission.php, thanks mhil@fmf.nl (Closes: #1808259).
+ - Fix team unread clarification count to work cross-contest.
 
 Version 2.1.0 - 5 September 2007
 --------------------------------
